Pagina basica struturada.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype>
+<!DOCTYPE html>
 <!--
 
 DTD = Document Type Definition
@@ -11,3 +11,37 @@ O principal objetivo do DOCTYPE é ativar o modo de renderização padrão do na
  
 Evitar o Modo "Quirks":
 Quando um DOCTYPE está ausente ou é inválido, o navegador entra em "quirks mode" (modo de peculiaridades). Nesse modo, o navegador tenta emular como navegadores antigos renderizariam a página, o que pode levar a inconsistências visuais e comportamentais. 
+
+
+<!-- 	HTML quer dizer Hyper tabindexext Markup language -->
+<html lang="pt-BR">
+	<head>
+		<meta charset="UTF-8">
+		<title>Exemplo Git</title>
+	</head>
+	<body>
+		<header>
+			<h1>Versionamento do HTML</h1>
+			<nav>
+				<a href= "#"Ajuda</a> |
+				<a href= "#"Sobre</a>
+			</nav>
+		</header>
+		<main>
+			<selection>
+				<aside>
+					<p>What is Lorem Ipsum?
+					Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</P>
+				</aside>
+				<selection>
+				<aside>
+					<p>What is Lorem Ipsum?
+					Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</P>
+				</aside>
+			</selection>
+		</main>
+		<footer>
+		<p>&copy; Todos os Direitos Reservados - 2025. Minha Página </p>
+		</footer>
+	</body>
+</html>
